--- a/.github/workflows/cron15.yml
+++ b/.github/workflows/cron15.yml
@@ -1,9 +1,9 @@
-name: Run Python script every 15 min
+name: Run Python script every 15 min (robust)
 
 on:
   schedule:
     - cron: "*/15 * * * *"   # toutes les 15 minutes (UTC)
-  workflow_dispatch:         # pour tester à la main
+  workflow_dispatch: {}
 
 concurrency:
   group: python-cron
@@ -12,10 +12,13 @@ concurrency:
 jobs:
   run:
     runs-on: ubuntu-latest
+
+    # Donne au job l'accès en écriture pour commit/push les fichiers générés
     permissions:
       contents: write
 
     env:
+      # Webhook Discord (à créer dans Settings → Secrets and variables → Actions)
       WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
     steps:
@@ -31,58 +34,37 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          # sécurités au cas où
+          pip install pandas pillow requests paramiko nbtlib
 
       - name: Ensure required folders exist
         run: |
-          mkdir -p data/stats
-          mkdir -p data/usercache
-          mkdir -p data/playerdata
-          mkdir -p data/cobblemonplayerdata
-          mkdir -p data/vanilla
-          mkdir -p images
-          mkdir -p staticdata
+          mkdir -p data/stats data/playerdata data/advancements data/usercache images fonts
 
       - name: Run script
-        run: |
-          set -o pipefail
-          python main.py | tee script_output.log
+        run: python main.py
 
-      # push robuste (évite les erreurs de type non fast-forward)
       - name: Commit & push changes (if any)
         run: |
-          set -e
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git fetch origin main
-          git pull --rebase --autostash origin main || true
           git add -A
-          if ! git diff --cached --quiet; then
-            git commit -m "Auto-update from cron: $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-            git push || { git pull --rebase --autostash origin main && git push; }
-          else
+          if git diff --cached --quiet; then
             echo "No changes to commit."
+          else
+            git commit -m "Auto-update from cron: ${{ github.run_id }}"
+            git push
           fi
 
-      # --- envoie le lien jsDelivr (fixe) + l'image jointe (seulement en 'schedule') ---
       - name: Send stable link + image to Discord
-        if: success() && github.event_name == 'schedule'
+        if: always()
         run: |
-          set -e
-          # URL stable (repo public requis)
-          REPO_PATH="${GITHUB_REPOSITORY}"   # ex: NeliKkTv/cobbledex-leaderboardV4
-          STABLE_URL="https://cdn.jsdelivr.net/gh/${REPO_PATH}@main/images/top3.png"
-
-          # 1) message avec lien fixe
-          MSG="🏆 Leaderboard mis à jour\n${STABLE_URL}"
-          PAYLOAD=$(printf '{"content":"%s"}' "$MSG")
-          curl -s -H "Content-Type: application/json" -X POST -d "$PAYLOAD" "$WEBHOOK"
-
-          # 2) image en pièce jointe (aperçu dans Discord)
-          if [ -f images/top3.png ]; then
-            curl -s -X POST \
-              -F "payload_json={\"content\":\"\"}" \
-              -F "file=@images/top3.png;type=image/png" \
-              "$WEBHOOK"
-          else
-            echo "images/top3.png introuvable; envoi uniquement du lien."
+          STABLE="https://cdn.jsdelivr.net/gh/${{ github.repository }}@main/images/top3.png"
+          # message de base
+          MSG="**${{ github.repository }}** - cron run #${{ github.run_number }}\nLien stable : ${STABLE}"
+          # Si le webhook est défini, on envoie
+          if [ -n "${WEBHOOK}" ]; then
+            curl -sS -H "Content-Type: application/json" -X POST \
+              -d "{\"content\":\"${MSG}\",\"embeds\":[{\"image\":{\"url\":\"${STABLE}\"}}]}" \
+              "${WEBHOOK}" || true
           fi
