--- a/.github/workflows/cron15.yml
+++ b/.github/workflows/cron15.yml
@@ -1,45 +1,38 @@
-name: Run Python script every 15 min (robust)
+name: Run Python script every 15 min
 
 on:
   schedule:
-    - cron: "*/15 * * * *"   # toutes les 15 minutes (UTC)
-  workflow_dispatch: {}
+    - cron: "*/15 * * * *"     # toutes les 15 minutes (UTC)
+  workflow_dispatch:           # exécution manuelle possible
 
-concurrency:
-  group: python-cron
-  cancel-in-progress: false
+permissions:
+  contents: write              # nécessaire pour commit/push
 
 jobs:
   run:
     runs-on: ubuntu-latest
 
-    # Donne au job l'accès en écriture pour commit/push les fichiers générés
-    permissions:
-      contents: write
-
-    env:
-      # Webhook Discord (à créer dans Settings → Secrets and variables → Actions)
-      WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
-
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+      uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install dependencies (if any)
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          # sécurités au cas où
-          pip install pandas pillow requests paramiko nbtlib
+          if [ -f requirements.txt ]; then
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+          fi
 
       - name: Ensure required folders exist
         run: |
-          mkdir -p data/stats data/playerdata data/advancements data/usercache images fonts
+          mkdir -p images
+          mkdir -p fonts
+          mkdir -p data
 
       - name: Run script
         run: python main.py
@@ -48,23 +41,30 @@ jobs:
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
           git add -A
           if git diff --cached --quiet; then
             echo "No changes to commit."
+            echo "CHANGED=false" >> $GITHUB_ENV
           else
-            git commit -m "Auto-update from cron: ${{ github.run_id }}"
+            git commit -m "Auto-update from cron: ${{ github.run_number }}"
             git push
+            echo "CHANGED=true" >> $GITHUB_ENV
           fi
 
-      - name: Send stable link + image to Discord
-        if: always()
+      - name: Send stable link + image to Discord (optional)
+        if: env.CHANGED == 'true'
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          OWNER: ${{ github.repository_owner }}
+          REPO:  ${{ github.event.repository.name }}
         run: |
-          STABLE="https://cdn.jsdelivr.net/gh/${{ github.repository }}@main/images/top3.png"
-          # message de base
-          MSG="**${{ github.repository }}** - cron run #${{ github.run_number }}\nLien stable : ${STABLE}"
-          # Si le webhook est défini, on envoie
-          if [ -n "${WEBHOOK}" ]; then
-            curl -sS -H "Content-Type: application/json" -X POST \
-              -d "{\"content\":\"${MSG}\",\"embeds\":[{\"image\":{\"url\":\"${STABLE}\"}}]}" \
-              "${WEBHOOK}" || true
+          if [ -n "$DISCORD_WEBHOOK_URL" ]; then
+            CDN_URL="https://cdn.jsdelivr.net/gh/${OWNER}/${REPO}@main/images/top3.png"
+            MSG="🔁 **Leaderboard mis à jour**\n${CDN_URL}"
+            curl -sS -H "Content-Type: application/json" \
+                 -d "{\"content\":\"${MSG}\"}" \
+                 "$DISCORD_WEBHOOK_URL"
+          else
+            echo "Pas de DISCORD_WEBHOOK_URL configuré — étape ignorée."
           fi
