--- a/config.ini
+++ b/config.ini
@@ -1,35 +1,61 @@
-# CONFIG FILE
+[GENERAL]
+# Nom du projet / affichage dans les logs
+ProjectName = CobbleDex Leaderboard Auto-Updater
+# Dossier de sortie pour l’image
+OutputFolder = images
+# Nom du fichier image généré
+OutputFile = top3.png
+# Intervalle de rafraîchissement (en minutes) – utilisé côté affichage uniquement
+RefreshInterval = 15
+# Mode debug (True = logs détaillés)
+Debug = True
 
-[INPUT]
-Mode = sftp
-LocalPath = null
-Host = 109.239.157.170
-Port = 22
-FTPPath = /
+[DISCORD]
+# Envoi d’un message Discord quand le classement est mis à jour
+Enable = True
+# Laisse vide ici, ton workflow enverra le webhook automatiquement s’il est configuré dans les secrets GitHub
+WebhookURL = 
+
+[MINECRAFT]
+# Répertoire de ton serveur (utilisé pour lire les fichiers de stats)
+ServerPath = /minecraft
+# Sous-dossier contenant les données joueur Cobblemon
+PlayerDataFolder = cobblemonplayerdata
+# Sous-dossier contenant les stats
+StatsFolder = stats
+# Nom du monde principal (si utilisé pour les chemins relatifs)
+WorldName = world
+
+[LEADERBOARD]
+# Nombre de joueurs à afficher sur le tableau
+TopCount = 20
+# Largeur de l’image finale
+ImageWidth = 1280
+# Hauteur de l’image finale
+ImageHeight = 720
+# Thème graphique ou style
+Theme = modern
+# Police à utiliser (mise en cache automatique si absente)
+FontPath = fonts/Minecraft-Seven_v2.ttf
+# Couleur du texte (en HEX sans le #)
+FontColor = FFFFFF
+# Taille du texte
+FontSize = 24
 
 [GITHUB]
-Enable=true
-# En Actions, le token vient de GITHUB_TOKEN automatiquement.
-# En local, tu peux renseigner un PAT si besoin, sinon laisse vide.
-Token=
-RepoOwner=NeliKkTv
-RepoName=cobbledex-leaderboardV4
-Branch=main
-
-[VANILLALEADERBOARD]
+# Laisse le workflow GitHub Actions pousser l’image, pas le script Python
 Enable = false
-Category = minecraft:custom
-Subcategory = minecraft:pokemon_registered
-CreateCSV = true
-CSVPath = total.csv
-CreateCSVMoney = false
-CSVPathMoney = money.csv
+# Aucun token ici, il est géré automatiquement par le workflow
+Token = 
+# Infos du dépôt (au cas où ton script en a besoin)
+RepoOwner = NeliKkTv
+RepoName = cobbledex-leaderboardV4
+Branch = main
 
-[TOPIMAGE]
-Enable = true
-NbPlayers = 20
-Width = 2
-Height = 1
-ImagePath = images/top3.png
-Leaderboards = vanilla/minecraft:custom/minecraft:pokemon_registered
-Titles = Leaderboard
+[ADVANCEMENTS]
+# Dossier où sont stockés les JSON d’avancement (Cobblemon)
+Path = /minecraft/world/advancements
+# Nom du critère utilisé pour le Pokédex
+Criteria = pokemon_registered
+# Extension des fichiers
+Extension = .json
