--- a/config.ini
+++ b/config.ini
@@ -1,61 +1,78 @@
 [GENERAL]
-# Nom du projet / affichage dans les logs
+# Nom du projet
 ProjectName = CobbleDex Leaderboard Auto-Updater
-# Dossier de sortie pour l’image
+
+# Dossier et nom de sortie de l'image
 OutputFolder = images
-# Nom du fichier image généré
 OutputFile = top3.png
-# Intervalle de rafraîchissement (en minutes) – utilisé côté affichage uniquement
+
+# Rafraîchissement automatique toutes les 15 minutes
 RefreshInterval = 15
-# Mode debug (True = logs détaillés)
+
+# Mode debug (met à True pour afficher plus de logs)
 Debug = True
 
-[DISCORD]
-# Envoi d’un message Discord quand le classement est mis à jour
-Enable = True
-# Laisse vide ici, ton workflow enverra le webhook automatiquement s’il est configuré dans les secrets GitHub
-WebhookURL = 
+
+[INPUT]
+# Mode de récupération des fichiers (manuel, local, ftp, sftp)
+Mode = sftp
+
+# Informations de connexion SFTP à ton serveur Nitroserv
+SFTPHost = 109.239.157.170     ; ⚠️ Remplace par ton vrai hôte si différent
+SFTPPort = 22
+
+# Fichiers contenant les identifiants
+SFTPUsernameFile = username.txt
+SFTPPasswordFile = password.txt
+
+# Dossiers distants sur ton serveur Minecraft
+RemoteStats = /minecraft/world/stats
+RemoteAdvancements = /minecraft/world/advancements
+RemoteCobblemon = /minecraft/cobblemonplayerdata
+
 
 [MINECRAFT]
-# Répertoire de ton serveur (utilisé pour lire les fichiers de stats)
+# Informations sur la structure de ton monde Minecraft
 ServerPath = /minecraft
-# Sous-dossier contenant les données joueur Cobblemon
 PlayerDataFolder = cobblemonplayerdata
-# Sous-dossier contenant les stats
 StatsFolder = stats
-# Nom du monde principal (si utilisé pour les chemins relatifs)
 WorldName = world
 
+
 [LEADERBOARD]
-# Nombre de joueurs à afficher sur le tableau
+# Paramètres d’affichage du classement
 TopCount = 20
-# Largeur de l’image finale
 ImageWidth = 1280
-# Hauteur de l’image finale
 ImageHeight = 720
-# Thème graphique ou style
 Theme = modern
-# Police à utiliser (mise en cache automatique si absente)
+
+# Police utilisée (assure-toi que le fichier existe dans /fonts)
 FontPath = fonts/Minecraft-Seven_v2.ttf
-# Couleur du texte (en HEX sans le #)
 FontColor = FFFFFF
-# Taille du texte
 FontSize = 24
 
+
+[DISCORD]
+# Envoi automatique sur un webhook Discord
+Enable = True
+WebhookURL =  ; ton URL webhook Discord ici (facultatif)
+
+
 [GITHUB]
-# Laisse le workflow GitHub Actions pousser l’image, pas le script Python
-Enable = false
-# Aucun token ici, il est géré automatiquement par le workflow
-Token = 
-# Infos du dépôt (au cas où ton script en a besoin)
+# Désactivé pour éviter l’erreur 401 (pas d’upload auto sur repo)
+Enable = False
+Token =
 RepoOwner = NeliKkTv
 RepoName = cobbledex-leaderboardV4
 Branch = main
 
+
 [ADVANCEMENTS]
-# Dossier où sont stockés les JSON d’avancement (Cobblemon)
+# Dossier contenant les fichiers d’avancements
 Path = /minecraft/world/advancements
-# Nom du critère utilisé pour le Pokédex
+
+# Nom du critère utilisé pour le classement (ex: "pokemon_registered")
 Criteria = pokemon_registered
-# Extension des fichiers
+
+# Extension des fichiers d’avancement
 Extension = .json
