--- a/config.ini
+++ b/config.ini
@@ -14,22 +14,28 @@ Debug = True
 
 
 [INPUT]
-# Mode de récupération des fichiers (manuel, local, ftp, sftp)
+
+# How do you wish to input the data files to the script? Valid values: manual, local, ftp, sftp (default: manual)
+# manual: upload manually all the files in the relevant folders in the data folder
+# local: use the folder of a server present on this computer
+# ftp: use an ftp connection to a distant server
+# sftp: use an sftp connection to a distant server
 Mode = sftp
 
-# Informations de connexion SFTP à ton serveur Nitroserv
-SFTPHost = 109.239.157.170     ; ⚠️ Remplace par ton vrai hôte si différent
-SFTPPort = 22
+## LOCAL (change this config only if you use local)
+# Write here the path to the root of your server. It can be an absolute path or a relative path starting at this project folder's root (default: null)
+LocalPath = null
 
-# Fichiers contenant les identifiants
-SFTPUsernameFile = username.txt
-SFTPPasswordFile = password.txt
-
-# Dossiers distants sur ton serveur Minecraft
-RemoteStats = /minecraft/world/stats
-RemoteAdvancements = /minecraft/world/advancements
-RemoteCobblemon = /minecraft/cobblemonplayerdata
-
+## FTP and SFTP (change this config only if you use ftp or sftp)
+# Write here host address (default: null)
+Host = 109.239.157.170
+# Write here port number (default: 21)
+Port = 22
+# If FTP or SFTP is in use, you need to create 2 files and put them at the ROOT of the project (next to this config):
+# username.txt, containing ONLY the username
+# password.txt, containing ONLY the password
+# Input here the path to the main folder of the server, or nothing if it is directly at the root of the ftp/sftp (default: Minecraft)
+FTPPath = /
 
 [MINECRAFT]
 # Informations sur la structure de ton monde Minecraft
@@ -76,3 +82,4 @@ Criteria = pokemon_registered
 
 # Extension des fichiers d’avancement
 Extension = .json
+
